src/snapshots/arkivisto__config__tests__parse_minimal_config.snap
---
source: src/config.rs
expression: config
---
outdir: /tmp/foo
scanners:
  - id: brother
    device_name: "brother3:net1;dev0"
    additional_args: []
    source_adf_single: Automatic Document Feeder(centrally aligned)
    source_adf_duplex: ~
    source_flatbed: FlatBed
authors: []
tools:
  ocrmypdf:
    language: eng
